# SealCrate

./: LICENSE  README.md  pylintrc  pyproject.toml
.github/workflows/: pull-request.yml  pull_request.yml
sealcrate/: __init__.py
tests/: __init__.py  conftest.py  model.py
tests/crate/: test_crate.py
tests/test_files/: text_file.txt
